# job_agent

./: .gitignore  README.md  data_storio.json  docker-compose.yml  gpt_workflow.json  job_description_template.json  my_cv.json  notebook.ipynb  ollama_warmup.ps1  pyproject.toml
data/: Experiencegift.json  cv_template.json  cv_template_project.json  jd_template.json  job_description.json  job_description_effectory.json  motivation_letter_template.json  test.txt
docs/cursor/: prompt_workflow_setup_template.md
notebooks/: notebook.ipynb
prompts/: ai_agent.prompt  ai_agent_update_motivation.prompt  job_description_extraction.prompt  n8n_agent_prompt.txt
prompts/cv_enhancer/: cv_enhancer_prompt_v1.meta.json  cv_enhancer_prompt_v1.txt
prompts/motivation_letter_enhancer/: motivation_letter_enhancer_prompt_v1.txt
prompts/multi_agent/: README.md  cv_review_agent_prompt.txt  master_agent_prompt.txt  update_cv_agent_prompt.txt  workflow.json
prompts/self_improvement/: README.md  cv_review_agent_prompt.txt  master_agent_prompt.txt  update_cv_agent_prompt.txt  workflow.json
src/job_agent/: __init__.py
src/job_agent/utils/: __init__.py  file_utils.py  prompt_registry.py
src/scripts/: __init__.py  search_prompts.py  update_cv_enhancer.py  update_motivation_letter_enhancer.py  update_multi_agent.py
tests/: __init__.py  test_file_utils.py
workflow/: JD_infor_extractor.json  Submit_JD_in_form.json  cv_enhancer.json  motivation_letter_enhancer.json  multi_agent.json  workflow.json
workflow/sub_workflow/: Load_JD.json  Load_cv.json
workflow/template/: Interview Orchestrator.json
